# bpekit

./: .gitignore  Cargo.toml  README.md  compose.yaml  encode.py  pyproject.toml  train_tokenizer.py
bpekit/: __init__.py  app.py  core.py
bpekit/commands/: __init__.py  download.py  encode.py  train.py
bpekit/utils/: __init__.py  dist.py  load.py  save.py
docker/master/: Dockerfile
docker/worker/: Dockerfile
scripts/: env.sh  install_whl.sh  job.sbatch  maturin_develop.sbatch
src/: all_reduce_counts.rs  block.rs  bpe.rs  comms.rs  indexed_blocks.rs  lib.rs  multiset.rs  paircounter.rs  pairheap.rs
src/commands/: mod.rs
src/commands/encode/: datastructures.rs  mod.rs  save.rs
src/commands/train/: comms.rs  datastructures.rs  iter.rs  mod.rs
src/encode/: mod.rs
src/train/: datastructures.rs  iterators.rs  mod.rs
src/utils/: mod.rs  progress.rs
test1/: 257.pkl
tests/: pairheap.rs
tokenizer/: bpe.py  dataset.py  datastructures.py  indexedlist.py  tokenizer.py
utils/: __init__.py  dataset.py  tokenizer.py
