[package]
name = "bpekit"
version = "0.1.0"
edition = "2021"

[lib]
name = "bpekit"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py310"] }
mpi = "0.8"
rayon = "1.10.0"
indicatif = "0.17.8"
atty = "0.2.14"
bincode = "1.3"
ndarray-npy = "0.9.1"
ndarray = "0.16.1"
anyhow = "1.0.93"
crossbeam-channel = "0.5.13"
num_cpus = "1.16"