[build-system]
requires = ["maturin>=0.12", "setuptools", "wheel"]
build-backend = "maturin"

[project]
name = "bpekit"
version = "0.1.0"
dependencies = [
    "datasets==3.1.0",
    "typer"
]

[project.scripts]
bpekit = "bpekit.app:app"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "bpekit.rust"
